[metadata]
name = alert_framework_base_classes
version = 1.1.0
author = Cloud Managed Systems
author_email = cms-support@ordina.nl
description = Metrics modules for alert framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.codecorner.nl/cms-infrastack/cms-monitoring/alert_framework/base_classes
project_urls =
    Bug Tracker = https://codecorner.nl/jira/secure/RapidBoard.jspa?rapidView=312&projectKey=CMS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9


[options.packages.find]
where = src
